# nix-lib

./: README.md
examples/nix2cabal/: README.md  flake.nix
examples/some-cabal-hashes/: README.md  flake.nix  sample.cabal
lib/: nix2cabal.nix  some-cabal-hashes.nix
