cabal-version:   3.0
name:            sample
version:         0.1.0.0
build-type:      Simple

common warnings
    ghc-options: -Wall

executable nix2cabal
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
                      , pipes
                      , vector
    hs-source-dirs:   app
    default-language: Haskell2010
